@@ -2,7 +2,7 @@
 #line 62 "cwebdir/common.w"
 
 /*4:*/
-#line 60 "cwebdir/comm-w2c.h"
+#line 57 "cwebdir/comm-w2c.h"
 
 #include <ctype.h>  
 #include <kpathsea/simpletypes.h>  
@@ -15,15 +15,15 @@
 #ifndef HAVE_GETTEXT
 #define HAVE_GETTEXT 0
 #endif
-#line 72 "cwebdir/comm-w2c.h"
+#line 69 "cwebdir/comm-w2c.h"
 
 #if HAVE_GETTEXT
 #include <libintl.h> 
 #else
-#line 76 "cwebdir/comm-w2c.h"
+#line 73 "cwebdir/comm-w2c.h"
 #define gettext(a) a
 #endif
-#line 78 "cwebdir/comm-w2c.h"
+#line 75 "cwebdir/comm-w2c.h"
 
 /*:4*//*91:*/
 #line 738 "cwebdir/comm-w2c.ch"
@@ -190,7 +190,7 @@ extern cweb program;
 extern int phase;
 
 /*:2*//*5:*/
-#line 100 "cwebdir/comm-w2c.h"
+#line 97 "cwebdir/comm-w2c.h"
 
 extern char section_text[];
 extern char*section_text_end;
@@ -198,7 +198,7 @@ extern char*id_first;
 extern char*id_loc;
 
 /*:5*//*6:*/
-#line 118 "cwebdir/comm-w2c.h"
+#line 115 "cwebdir/comm-w2c.h"
 
 extern char buffer[];
 extern char*buffer_end;
@@ -206,7 +206,7 @@ extern char*loc;
 extern char*limit;
 
 /*:6*//*7:*/
-#line 135 "cwebdir/comm-w2c.h"
+#line 132 "cwebdir/comm-w2c.h"
 
 extern int include_depth;
 extern FILE*file[];
@@ -223,7 +223,7 @@ extern boolean changing;
 extern boolean web_file_open;
 
 /*:7*//*9:*/
-#line 156 "cwebdir/comm-w2c.h"
+#line 153 "cwebdir/comm-w2c.h"
 
 extern sixteen_bits section_count;
 extern boolean changed_section[];
@@ -231,7 +231,7 @@ extern boolean change_pending;
 extern boolean print_where;
 
 /*:9*//*10:*/
-#line 171 "cwebdir/comm-w2c.h"
+#line 168 "cwebdir/comm-w2c.h"
 
 typedef struct name_info{
 char*byte_start;
@@ -256,12 +256,12 @@ extern hash_pointer hash_end;
 extern hash_pointer h;
 
 /*:10*//*12:*/
-#line 216 "cwebdir/comm-w2c.h"
+#line 213 "cwebdir/comm-w2c.h"
 
 extern int history;
 
 /*:12*//*14:*/
-#line 233 "cwebdir/comm-w2c.h"
+#line 234 "cwebdir/comm-w2c.h"
 
 extern int argc;
 extern char**argv;
@@ -274,7 +274,7 @@ extern boolean flags[];
 extern const char*use_language;
 
 /*:14*//*15:*/
-#line 249 "cwebdir/comm-w2c.h"
+#line 250 "cwebdir/comm-w2c.h"
 
 extern FILE*C_file;
 extern FILE*tex_file;
@@ -425,19 +425,16 @@ string texmf_locale;
 #line 43 "cwebdir/comm-w2c.h"
 
 extern void common_init(void);
-extern void cb_show_banner(void);
-
-extern void print_stats(void);
 
 /*:3*//*8:*/
-#line 150 "cwebdir/comm-w2c.h"
+#line 147 "cwebdir/comm-w2c.h"
 
 extern boolean get_line(void);
 extern void check_complete(void);
 extern void reset_input(void);
 
 /*:8*//*11:*/
-#line 194 "cwebdir/comm-w2c.h"
+#line 191 "cwebdir/comm-w2c.h"
 
 extern name_pointer id_lookup(const char*,const char*,eight_bits);
 
@@ -451,12 +448,16 @@ extern boolean names_match(name_pointer,const char*,size_t,eight_bits);
 extern void init_node(name_pointer);
 
 /*:11*//*13:*/
-#line 219 "cwebdir/comm-w2c.h"
+#line 216 "cwebdir/comm-w2c.h"
 
 extern int wrap_up(void);
 extern void err_print(const char*);
 extern void fatal(const char*,const char*);
 extern void overflow(const char*);
+
+extern void cb_show_banner(void);
+
+extern void print_stats(void);
 
 /*:13*//*24:*/
 #line 176 "cwebdir/common.w"
