@@ -2,7 +2,7 @@
 #line 62 "common.w"
 
 /*4:*/
-#line 49 "common.h"
+#line 48 "common.h"
 
 #include <ctype.h>  
 #include <stdbool.h>  
@@ -135,7 +135,7 @@ extern boolean program;
 extern int phase;
 
 /*:2*//*5:*/
-#line 79 "common.h"
+#line 78 "common.h"
 
 extern char section_text[];
 extern char*section_text_end;
@@ -143,7 +143,7 @@ extern char*id_first;
 extern char*id_loc;
 
 /*:5*//*6:*/
-#line 97 "common.h"
+#line 96 "common.h"
 
 extern char buffer[];
 extern char*buffer_end;
@@ -151,7 +151,7 @@ extern char*loc;
 extern char*limit;
 
 /*:6*//*7:*/
-#line 114 "common.h"
+#line 113 "common.h"
 
 extern int include_depth;
 extern FILE*file[];
@@ -167,7 +167,7 @@ extern boolean changing;
 extern boolean web_file_open;
 
 /*:7*//*9:*/
-#line 134 "common.h"
+#line 133 "common.h"
 
 extern sixteen_bits section_count;
 extern boolean changed_section[];
@@ -175,7 +175,7 @@ extern boolean change_pending;
 extern boolean print_where;
 
 /*:9*//*10:*/
-#line 149 "common.h"
+#line 148 "common.h"
 
 typedef struct name_info{
 char*byte_start;
@@ -200,12 +200,12 @@ extern hash_pointer hash_end;
 extern hash_pointer h;
 
 /*:10*//*12:*/
-#line 194 "common.h"
+#line 193 "common.h"
 
 extern int history;
 
 /*:12*//*14:*/
-#line 210 "common.h"
+#line 211 "common.h"
 
 extern int argc;
 extern char**argv;
@@ -216,7 +216,7 @@ extern char scn_file_name[];
 extern boolean flags[];
 
 /*:14*//*15:*/
-#line 224 "common.h"
+#line 225 "common.h"
 
 extern FILE*C_file;
 extern FILE*tex_file;
@@ -338,17 +338,16 @@ FILE*active_file;
 #line 43 "common.h"
 
 extern void common_init(void);
-extern void print_stats(void);
 
 /*:3*//*8:*/
-#line 128 "common.h"
+#line 127 "common.h"
 
 extern boolean get_line(void);
 extern void check_complete(void);
 extern void reset_input(void);
 
 /*:8*//*11:*/
-#line 172 "common.h"
+#line 171 "common.h"
 
 extern name_pointer id_lookup(const char*,const char*,eight_bits);
 
@@ -362,12 +361,14 @@ extern boolean names_match(name_pointer,const char*,size_t,eight_bits);
 extern void init_node(name_pointer);
 
 /*:11*//*13:*/
-#line 197 "common.h"
+#line 196 "common.h"
 
 extern int wrap_up(void);
 extern void err_print(const char*);
 extern void fatal(const char*,const char*);
 extern void overflow(const char*);
+
+extern void print_stats(void);
 
 /*:13*//*24:*/
 #line 176 "common.w"
