@@ -1,3 +1,10 @@
+2023-08-13  Andreas Scherer  <https://ascherer.github.io>
+
+	* comm-w2c.h,
+	* common.c,
+	* common.h,
+	* ctangle.c: Move 'print_stats' prototype in common.h.
+
 2023-08-11  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctwill-mini.ch,
